// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Dd checkGrammar=false 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd checkGrammar=true 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd checkHighlight=false 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd checkHighlight=true 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd checkSpaces=false 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd checkSpaces=true 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd className="my-classname" 1`] = `
<dd
  className="uu5-bricks-dd my-classname"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd className="test-classname" 1`] = `
<dd
  className="uu5-bricks-dd test-classname"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd content="This is Content from ContentMixin" 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
>
  This is Content from ContentMixin
</dd>
`;

exports[`UU5.Bricks.Dd content=12345 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
>
  12345
</dd>
`;

exports[`UU5.Bricks.Dd controlled=false 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd controlled=true 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd default props 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd disabled=false 1`] = `
<dd
  className="uu5-bricks-dd"
  disabled={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd disabled=false 3`] = `
<dd
  className="uu5-bricks-dd"
  disabled={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd disabled=true 1`] = `
<dd
  className="uu5-bricks-dd"
  disabled={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd disabled=true 3`] = `
<dd
  className="uu5-bricks-dd"
  disabled={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd dynamic=false 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd dynamic=true 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd fullTextSearchPriority=0 1`] = `
<dd
  className="uu5-bricks-dd uu-fulltextsearch-0"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd hidden=false 1`] = `
<dd
  className="uu5-bricks-dd"
  hidden={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd hidden=false 3`] = `
<dd
  className="uu5-bricks-dd"
  hidden={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd hidden=true 1`] = `
<dd
  className="uu5-bricks-dd"
  hidden={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd hidden=true 3`] = `
<dd
  className="uu5-bricks-dd"
  hidden={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd id="myId" 1`] = `
<dd
  className="uu5-bricks-dd"
  id="myId"
/>
`;

exports[`UU5.Bricks.Dd id="test-id" 1`] = `
<dd
  className="uu5-bricks-dd"
  id="test-id"
/>
`;

exports[`UU5.Bricks.Dd ignoreHTML=false 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd ignoreHTML=true 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd is inner bricks.dt Bricks.Dt is root to: UU5.Bricks.Dd 1`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Dt
    content="Dwarf"
    id="uuID02"
    key="uuID02"
  />
  <Dd
    content="The small man with funny hat"
    id="uuID03"
    key="uuID03"
  />
  <Dt
    content="Red Dwarf"
    id="uuID04"
    key="uuID04"
  />
  <Dd
    content="Small star, or large space ship from british sitcom."
    id="uuID05"
    key="uuID05"
  />
</dl>
`;

exports[`UU5.Bricks.Dd mainAttrs=undefined 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd name="myName" 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd nestingLevel="box" 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.Dd noIndex=false 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd noIndex=true 1`] = `
<dd
  className="uu5-bricks-dd uu-fulltextsearch-0 uu5-noindex"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd noPrint=false 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd noPrint=true 1`] = `
<dd
  className="uu5-bricks-dd uug-1ak6bum"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd selected=false 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd selected=true 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd style="padding:8px; borderRadius: 2px" 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
/>
`;

exports[`UU5.Bricks.Dd style={"backgroundColor":"red","color":"blue"} 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
/>
`;

exports[`UU5.Bricks.Dd style={"margin":8} 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={
    Object {
      "margin": 8,
    }
  }
/>
`;

exports[`UU5.Bricks.Dd textCorrector=false 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd textCorrector=true 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Dd tooltip="My Tooltip" 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
/>
`;
